Bug 71450 - FILEOPEN: ODT with frame with no draw:name does not open
Summary: FILEOPEN: ODT with frame with no draw:name does not open
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
4.1.3.1 rc
Hardware: Other All
: medium major
Assignee: Michael Stahl
URL:
Whiteboard: odf target:4.3.0 target:4.2.0.0.beta2...
Keywords: regression
: 71698 72150 72643 73508 73513 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-11-10 05:54 UTC by Fahad Al-Saidi
Modified: 2014-01-12 07:12 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments
arabic doc exported form google doc (710.02 KB, application/vnd.oasis.opendocument.text)
2013-11-10 05:54 UTC, Fahad Al-Saidi
Details
2 last bts (17.51 KB, text/plain)
2013-11-10 10:32 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fahad Al-Saidi 2013-11-10 05:54:57 UTC
Created attachment 88955 [details]
arabic doc exported form google doc

I export the attached file from google doc but libreoffice can not open it. In the other hand, I can open it with Calligra office without problem.
Comment 1 Julien Nabet 2013-11-10 09:08:55 UTC
Comment on attachment 88955 [details]
arabic doc exported form google doc

Mimetype fixed
Comment 2 Julien Nabet 2013-11-10 10:32:02 UTC
Created attachment 88961 [details]
2 last bts

On pc Debian x86-64 with master sources updated yesterday, I didn't have a crash but had read error popup.
I used gdb and "catch throw", I attached 2 last bts:
- the first one corresponds at the moment just before the read error popup
- the second one corresponds at the moment just after the read error popup
Comment 3 Julien Nabet 2013-11-10 10:33:14 UTC
Michael: I managed to retrieve 2 bts (before and after read error popup), do you know who may help here?
Comment 4 Michael Meeks 2013-11-11 12:09:50 UTC
A missing layout-cache should be fine:

        OUString sStreamName("layout-cache");
        try
        {
            uno::Reference < io::XStream > xStm = xStorage->openStreamElement( sStreamName, embed::ElementModes::READ );
            SvStream* pStrm2 = utl::UcbStreamHelper::CreateStream( xStm );
            if( !pStrm2->GetError() )
                rDoc.ReadLayoutCache( *pStrm2 );
            delete pStrm2;
        }
        catch ( uno::Exception& )
        {
        }

so we should ignore that exception.

I would guess that a dbgutil build may churn something useful out on the console when loading that; but I don't have one to hand ...

Abdulmajeed ? do you have a dbugtil build around that you could get some more debug info out of for this load problem ? :-)

Thanks ! =)
Comment 6 Michael Meeks 2013-11-11 16:21:52 UTC
Michael - this is blamed on a commit of yours (or I guess one nearby?) :-)
Comment 7 abdulmajeed 2013-11-12 05:44:23 UTC
> Abdulmajeed ? do you have a dbugtil build around that you could get some
> more debug info out of for this load problem ? :-)
i'm sorry i don't have dbugtil on my machine :(
Comment 8 Michael Meeks 2013-11-12 10:37:55 UTC
Inferring regression from Maxim's causal commit.
Comment 9 Maxim Monastirsky 2013-11-17 15:07:24 UTC
*** Bug 71698 has been marked as a duplicate of this bug. ***
Comment 10 Michael Stahl 2013-12-02 22:41:03 UTC
text:frame in the bugdoc do not have draw:name attributes, resulting in 
an exception trying to set the empty string as name.

attachment in bug 71698 contains 2 draw:frame with the same draw:name="N3318_PGS1552" which is (probably) not valid ODF;
if somebody can find the steps to reproduce creating such
a document with LO please file a bug.

fixed on master.
Comment 11 Commit Notification 2013-12-02 22:41:30 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8171e713e74e3d09e86592c28abfe05d0400c071

fdo#71450 fdo#71698: ODF import: fix frame name corner cases



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2013-12-02 22:52:26 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ae9017f0ba3a3a1fdc55b2f3d57230d04a46808e&h=libreoffice-4-2

fdo#71450 fdo#71698: ODF import: fix frame name corner cases


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2013-12-03 09:10:39 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0763cf6ed7bdc629e59b5df757b9ef4f5273f393&h=libreoffice-4-1

fdo#71450 fdo#71698: ODF import: fix frame name corner cases


It will be available in LibreOffice 4.1.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Friedmann Bruno 2013-12-03 09:36:00 UTC
Thanks for the push.

I've made some torture test. Loo is safe about creating this kind of content.xml erros.

Having the right exception is a most. to help to find why the document is invalid.
Thus a patch has been created for the upstream lib used to modify odt template.

Thanks a lot!
Comment 15 Commit Notification 2013-12-04 10:29:02 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-1-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3da29e6813a64b97fb56436a80dae7fafc39eba3&h=libreoffice-4-1-4

fdo#71450 fdo#71698: ODF import: fix frame name corner cases


It will be available already in LibreOffice 4.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Michael Stahl 2013-12-09 11:43:04 UTC
*** Bug 72150 has been marked as a duplicate of this bug. ***
Comment 17 Maxim Monastirsky 2013-12-18 21:04:21 UTC
*** Bug 72643 has been marked as a duplicate of this bug. ***
Comment 18 Maxim Monastirsky 2014-01-12 07:02:08 UTC
*** Bug 73508 has been marked as a duplicate of this bug. ***
Comment 19 Maxim Monastirsky 2014-01-12 07:12:51 UTC
*** Bug 73513 has been marked as a duplicate of this bug. ***